= Release notes v.9.10

== Table of Contents

* Updated xs2a version

== Updated xs2a version

From now on, xs2a-connector-examples uses xs2a version 9.10